another color switch

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           </form>
         </div>
         <div class="card">
-          <h3>Contact</h3>
+          <h3>Contact for a free quote</h3>
           <p><strong>Email:</strong> <a href="mailto:btexteriorslondon@gmail.com">btexteriorslondon@gmail.com</a><br>
              <strong>Phone:</strong> +1&nbsp;519&nbsp;902&nbsp;4507<br>
              <strong>Service area:</strong> London, Ontario & surrounding area</p>
