--- a/index.html
+++ b/index.html
@@ -175,46 +175,38 @@
   </section>
 
   <!-- CONTACT -->
-  <section id="contact" class="contact">
-    <div class="container">
-      <h2 class="section-title">Get a Free Quote</h2>
+  <!-- CONTACT -->
+<section id="contact" class="contact">
+  <div class="container">
+    <h2 class="section-title">Get a Free Quote</h2>
 
-      <div class="grid grid-2">
-        <div class="card">
-          <form id="contact-form" aria-label="Contact form">
-            <input class="input" type="text" name="name" placeholder="Your name" aria-label="Your name" required>
-            <input class="input" type="email" name="email" placeholder="Email" aria-label="Email" required>
-            <input class="input" type="tel" name="phone" placeholder="Phone (optional)" aria-label="Phone">
-            <textarea class="input" name="message" placeholder="Tell us about your project…" aria-label="Message" required></textarea>
-            <button class="btn" type="submit">Send</button>
-            <p class="small">We typically reply within 24 hours.</p>
-          </form>
-        </div>
+    <div class="grid grid-2">
+      <!-- Form -->
+      <div class="card">
+        <form id="contact-form" aria-label="Contact form">
+          <input class="input" type="text" name="name" placeholder="Your name" required>
+          <input class="input" type="email" name="email" placeholder="Email" required>
+          <input class="input" type="tel" name="phone" placeholder="Phone (optional)">
+          <textarea class="input" name="message" placeholder="Tell us about your project…" required></textarea>
+          <button class="btn" type="submit">Send</button>
+          <p class="small">We typically reply within 24 hours.</p>
+        </form>
+      </div>
 
-        <div class="card">
-          <h3>Contact for a Free Quote</h3>
-          <p>
-            <strong>Email:</strong> <a href="mailto:btexteriorslondon@gmail.com">btexteriorslondon@gmail.com</a><br>
-            <strong>Phone:</strong> +1&nbsp;519&nbsp;902&nbsp;4507<br>
-            <strong>Service area:</strong> London, Ontario & surrounding area
-          </p>
-          <p>
-            <a class="btn btn-outline" href="https://maps.google.com/?q=London%2C+ON" target="_blank" rel="noopener">View Area on Maps</a>
-          </p>
-          <p class="small">Licensed & insured. Workmanship warranty available.</p>
-        </div>
+      <!-- Contact Info -->
+      <div class="card contact-info">
+        <h3>Contact for a Free Quote</h3>
+
+        <p><strong>Email:</strong> <a href="mailto:btexteriorslondon@gmail.com">btexteriorslondon@gmail.com</a></p>
+        <p><strong>Phone:</strong> +1&nbsp;519&nbsp;902&nbsp;4507</p>
+        <p><strong>Service area:</strong> London, Ontario & surrounding area</p>
+
+        <a class="btn" href="https://maps.google.com/?q=London%2C+ON" target="_blank" rel="noopener">
+          View Area on Maps
+        </a>
+
+        <p class="small">Licensed & insured. Workmanship warranty available.</p>
       </div>
     </div>
-  </section>
-</main>
-
-<footer>
-  <div class="container">
-    <p>&copy; <span id="year"></span> BT Exterior Co. All rights reserved.</p>
-    <p class="small">Content & imagery © their respective owners.</p>
   </div>
-</footer>
-
-<script src="script.js"></script>
-</body>
-</html>
+</section>
