--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BT Exterior Co. — Eavestrough, Soffit, Fascia & Siding in London, Ontario</title>
   <meta name="description" content="High-quality exterior installations for residential and commercial properties in London, Ontario: eavestrough, soffit, fascia, siding, downspouts, repairs. Fair, honest pricing.">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap">
 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="styles.css">
